[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/exploration/ui/exploration_ui.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/ability_indicators.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/inventory_menu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/card_collection_menu.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/dash_motion_lines.tscn" id="5"]
[ext_resource type="Script" path="res://scenes/exploration/ui/currency_popup_layer.gd" id="6"]

[node name="ExplorationUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="CurrencyPopupLayer" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6")

[node name="AbilityIndicators" parent="." instance=ExtResource("2")]

[node name="InventoryMenu" parent="." instance=ExtResource("3")]

[node name="CardCollectionMenu" parent="." instance=ExtResource("4")]

[node name="DashMotionLines" parent="." instance=ExtResource("5")]
